--- a/qml.qrc
+++ b/qml.qrc
@@ -17,5 +17,7 @@
         <file>fonts/Roboto-Regular.ttf</file>
         <file>fonts/Roboto-Thin.ttf</file>
         <file>fonts/Roboto-ThinItalic.ttf</file>
+        <file>help.qml</file>
+        <file>TodoView.qml</file>
     </qresource>
 </RCC>
