--- a/resource/qml.qrc
+++ b/resource/qml.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>list.qml</file>
-        <file>add-todo.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/list.qml</file>
+        <file>qml/add-todo.qml</file>
         <file>qtquickcontrols2.conf</file>
-        <file>MyButton.qml</file>
+        <file>qml/MyButton.qml</file>
         <file>fonts/Roboto-Medium.ttf</file>
         <file>fonts/Roboto-Black.ttf</file>
         <file>fonts/Roboto-BlackItalic.ttf</file>
@@ -17,7 +17,7 @@
         <file>fonts/Roboto-Regular.ttf</file>
         <file>fonts/Roboto-Thin.ttf</file>
         <file>fonts/Roboto-ThinItalic.ttf</file>
-        <file>help.qml</file>
-        <file>TodoView.qml</file>
+        <file>qml/help.qml</file>
+        <file>qml/TodoView.qml</file>
     </qresource>
 </RCC>
